# sleeper

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICES  README.md  cdk.json  shell.nix  work_in_progress_notes.md
cpp/src/cmdline/: CMakeLists.txt  broken_sum_chunk_reader.cpp  check_sort.cpp  chunk_reader.cpp  configure_logging.cpp  data_sink.cpp  locale_set.cpp  lub.cpp  main.cpp  slice.cpp  sum_chunk_reader.cpp
cpp/src/compact_grpc/: CMakeLists.txt
cpp/src/compactor/: CMakeLists.txt  configure_logging.cpp  locale_set.cpp  locale_set.hpp  main.cpp
cpp/src/cudf_compact/: CMakeLists.txt  cudf_compact.cpp  cudf_utils.cpp  filters.cpp  filters.cu  format_helper.cpp  parquet_types.cpp  ranges.cu
cpp/src/cudf_compact/s3/: s3_sink.cpp  s3_utils.cpp
cpp/src/format_helper/: CMakeLists.txt  format_helper.cpp
cpp/src/ftxui_sample/: CMakeLists.txt  main.cpp
cpp/src/io/: CMakeLists.txt  prefetch.cpp  prefetch_source.cpp  s3_sink.cpp  s3_utils.cpp
cpp/src/s3/: CMakeLists.txt  s3_sink.cpp  s3_utils.cpp
cpp/src/sample_library/: CMakeLists.txt  sample_library.cpp
java/compaction-job-execution/: CMakeLists.txt  pom.xml
java/compaction-job-execution/cmake/: Findgmp.cmake
java/compaction-job-execution/docker/: Dockerfile  gpu_build.sh  run_cmake.sh
java/compaction/compaction-job-execution/: .clang-format  .clang-tidy  CMakeLists.txt  pom.xml
java/compaction/compaction-job-execution/cmake/: Cache.cmake  CompilerWarnings.cmake
java/compaction/compaction-job-execution/docker/: Dockerfile  run.sh
python/: LICENSE  READMER.md  pyproject.toml  setup.py
python/examples/: direct_writes.py  simplest_example.py  web_socket_query_examples.ipynb
python/src/pq/: parquet_deserial.py  parquet_serial.py
python/src/sleeper/: bulk_export.py  client.py  config.py  ingest.py  ingest_batcher.py  instance_properties.py  query.py  sleeper.py  test_config.py  web_socket_query.py
python/src/sleeper/properties/: __init__.py  bucket_property.py  cdk_defined_properties.py  config_bucket.py  dynamo_table_property.py  instance_properties.py  queue_property.py  user_defined_properties.py
python/test/: batch_writer.py  bulk_import_files_from_s3.py  bulk_import_files_from_s3_times.py  exact_query.py  exact_query_via_web_socket.py  ingest_files_from_s3.py  range_query.py  range_query_via_web_socket.py
python/test/web_socket_query/: .env.template  README.md  cmd_inputs.py  message_type.py  process_query.py  query.py  requirments.txt  results.json.example  web_socket_query.py
python/tests/sleeper/: bulk_export_test.py  localstack.py  localstack_sleeper_client.py  repository_path.py  test_bulk_export.py  test_bulk_import.py  test_config.py  test_ingest.py  test_ingest_batcher.py  test_instance_properties.py  test_instance_properties_localstack.py  test_query.py  test_query_via_client.py
python/tests/sleeper/properties/: instance_properties_helper.py  test_config_bucket_localstack.py  test_instance_properties.py  test_instance_properties_localstack.py
rust/: Cargo.toml  Cross.sccache.toml  Cross.toml  Dockerfile.aarch64-unknown-linux-gnu  Dockerfile.sccache.aarch64-unknown-linux-gnu  Dockerfile.sccache.x86_64-unknown-linux-gnu  Dockerfile.x86_64-unknown-linux-gnu  build-docker-builder.sh  build-for-maven.sh  build-in-docker.sh  buildForMaven.sh  cross-prebuild.sh  maven-build-arm.sh  maven-build-x86.sh  rust-build-output.txt  sccache-prebuilt.sh  sccache-source.sh
rust/aggregator_udfs/: Cargo.toml
rust/aggregator_udfs/src/: lib.rs  map_aggregate.rs  nonnull.rs
rust/aggregator_udfs/src/map_aggregate/: accumulator.rs  aggregator.rs  group_accumulator.rs  state.rs
rust/apps/: Cargo.toml
rust/apps/src/: lib.rs
rust/apps/tests/: compact_cli.rs  query_cli.rs
rust/builder/: buildAll.sh
rust/builder/base/: Dockerfile
rust/builder_image/: Dockerfile  build-graviton  build-x86
rust/builders/: buildAll.sh  buildAllSccache.sh
rust/builders/aarch64/: Dockerfile
rust/builders/base/: .dockerignore  Dockerfile
rust/builders/base-sccache/: Dockerfile  install-sccache.sh
rust/builders/graviton/: Dockerfile
rust/builders/sccache/: Dockerfile  install-sccache.sh
rust/builders/x86/: Dockerfile
rust/builders/x86_64/: Dockerfile
rust/compaction/: Cargo.toml
rust/compaction/src/: aws_s3.rs  datafusion.rs  details.rs  lib.rs  readahead.rs  s3.rs  sketch.rs  store.rs
rust/compaction/src/datafusion/: ageoff_udf.rs  aggregate_udf.rs  functions.rs  metrics.rs  (+3 more)
rust/compaction/tests/: compaction_helpers.rs  compaction_test.rs
rust/compactor/: Cargo.toml
rust/compactor/tests/: compactor_cli.rs
rust/filter_udfs/: Cargo.toml
rust/filter_udfs/src/: ageoff.rs  lib.rs
rust/object_store/: .asf.yaml  .github_changelog_generator  .gitignore  CHANGELOG-old.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
rust/object_store/.cargo/: config.toml
rust/object_store/.github/: dependabot.yml
rust/object_store/src/: attributes.rs  buffered.rs  chunked.rs  delimited.rs  integration.rs  lib.rs  limit.rs  list.rs  local.rs  memory.rs  parse.rs  prefix.rs  registry.rs  throttle.rs  util.rs
rust/object_store/tests/: get_range_file.rs  http.rs
rust/objectstore_ext/: Cargo.toml
rust/objectstore_ext/src/: lib.rs  readahead.rs  s3.rs  store.rs
rust/query_sql/: Cargo.toml
rust/query_sql/src/: lib.rs  sql_sort_fix.rs
rust/reqwest/: Cargo.toml
rust/reqwest/src/: error.rs
rust/rust_sketch/: Cargo.toml  build.rs
rust/rust_sketch/src/: lib.rs  main.rs  quantiles.rs
rust/sleeper_core/: Cargo.toml
rust/sleeper_core/src/: common_config.rs  datafusion.rs  filter_aggregation_config.rs  lib.rs  sleeper_context.rs  test_utils.rs
rust/sleeper_core/test_util/: Cargo.toml
rust/sleeper_core/tests/: compaction_helpers.rs  compaction_test.rs  df_object_store_bug_check.rs  query_test.rs  sleeper_context_test.rs
rust/sleeper_df/: Cargo.toml  build.rs
rust/sleeper_df/include/: arrow_c_abi.h
rust/sleeper_df/src/: context.rs  datafusion.rs  details.rs  ffi_objects.rs  lib.rs  log.rs  objects.rs  unpack.rs
rust/sleeper_df/tests/: compaction_helpers.rs  compaction_test.rs
(+8810 files in other folders)
