# Copyright 2022-2026 Crown Copyright
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
[workspace]
members = [ "aggregator_udfs", "filter_udfs", "apps", "objectstore_ext", "rust_sketch", "sleeper_core", "sleeper_df" ]
resolver = "2"

[workspace.package]
version = "0.35.3-SNAPSHOT"
edition = "2024"
rust-version = "1.93"
publish = false
license = "Apache-2.0"
repository = "https://github.com/gchq/sleeper"
authors = ["GCHQ"]

[workspace.dependencies]
arrow = { version = "57.2.0" }                      # Batch of reading from Parquet files
assert_cmd = { version = "2.1.2" }                 # CLI interface testing
async-trait = { version = "0.1.89" }
aws-config = { version = "1.8.15" }                  # Credential loading
aws-credential-types = { version = "1.2.14" }        # Credential provider types
aws-types = { version = "1.3.13" }                   # for Region
bytes = { version = "1.11.1" }                      # Byte buffer for S3 uploading
cargo_metadata = { version = "0.23.1" }             # Access cargo metadata programmtically
cbindgen = { version = "0.29.2" }
chrono = { version = "0.4.44" }                     # Log helper
clap = { version = "4.6.0" }                       # Cmd line args processing
color-eyre = { version = "0.6.5" }                  # Colourised version of `anyhow`
cxx = { version = "1.0.194" }                       # Exception handling for Rust
cxx-build = { version = "1.0.192" }
datafusion = { version = "52.4.0" }
env_logger = { version = "0.11.10" }                 # Standard logging to stderr
futures = { version = "0.3.32" }                    # Async processing
human-panic = { version = "2.0.8" }                 # Readable panic messages
libc = { version = "0.2.184" }                      # FFI type support
log = { version = "0.4.29" }                        # Standard logging framework
nohash = { version = "0.2.0" }                      # No-op hashing for integral types
num-format = { version = "0.4.4" }                  # Nicely formatted numbers
num-traits = { version = "0.2.19" }                 # Unified traits for integral types
object_store = { version = "0.12.4" }               # Remote cloud storage access
owo-colors = { version = "4.3.0" }                  # Colourised output
predicates = { version = "3.1.4" }                  # Test assertions
rand = { version = "0.10.1" }                        # Random number generation
regex = { version = "1.12.3" }                      # Regular expressions
serde_json = { version = "1.0.149" }                # Process metadata JSON
tempfile = { version = "3.26.0" }                   # Create temporary files
test-log = { version = "0.2.19" }
testing_logger = { version = "0.1.1" }              # Assert on logger output in tests
thiserror = { version = "2.0.18" }                  # Derivable error enums
tokio = { version = "1.51.1", features = ["full"] } # Async runtime
tokio-test = { version = "0.4.5" }                  # Doc tests
url = { version = "2.5.8" }                         # URL processing for S3
mockall = { version = "0.14.0" }                    # Mock trait library

[workspace.metadata.datasketches]
datasketches_cpp_version = "5.2.0"

[profile.release]
incremental = true
lto = false
overflow-checks = true
debug = false
strip = true
