# Copyright 2022-2024 Crown Copyright
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#     http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
[package]
name = "compactor"
authors = ["GCHQ"]
rust-version = "1.79"
description = "Binary crate for running the data compactor from the command line."
version = "0.28.0-SNAPSHOT"
edition = "2021"
license = "Apache-2.0"
keywords = ["sleeper", "compaction"]
categories = ["science"]
publish = false
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { version = "2.0.8" } # Derivable error enums
log = { version = "0.4.22", features = [
    "release_max_level_debug",
] } # Standard logging framework
env_logger = { version = "0.11.5" } # Standard logging to stderr
human-panic = { version = "2.0.2" } # Readable panic messages
clap = { version = "4.5.23", features = ["derive"] } # Cmd line args processing
color-eyre = { version = "0.6.2" } # Colourised version of `anyhow`
owo-colors = { version = "4.1.0" } # Colourised output
compaction = { path = "../compaction" }
chrono = { version = "0.4.39" } # Log helper
tokio = { version = "1.42.0", features = ["full"] } # Async runtime
url = { version = "2.5.4" }
num-format = { version = "0.4.4" } # Formatted numbers
