# Copyright 2022-2025 Crown Copyright
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
[package]
name = "compactor"
description = "Binary crate for running the data compactor from the command line."
keywords = ["sleeper", "compaction"]
categories = ["science"]
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
publish = { workspace = true }

[dependencies]
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
color-eyre = { workspace = true }
compaction = { path = "../compaction" }
env_logger = { workspace = true }
human-panic = { workspace = true }
log = { workspace = true, features = ["release_max_level_debug"] }
num-format = { workspace = true }
owo-colors = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
url = { workspace = true }
