#  Copyright 2022-2024 Crown Copyright
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
[package]
name = "rust_sketch"
version = "0.27.0"
edition = "2021"
rust-version = "1.77"
publish = false
authors = ["GCHQ"]
description = "Rust bindings for the quantile sketch from Apache DataSketches (https://datasketches.apache.org/) C++ implementation (https://github.com/apache/datasketches-cpp)."
keywords = ["datasketches", "sketch", "quantile_sketch"]
license = "Apache-2.0"

[dependencies]
cxx = { version = "1.0.134" }

[build-dependencies]
cxx-build = { version = "1.0.134" }
git2 = { version = "0.19.0" }

[target.'cfg(target_os = "macos")'.build-dependencies]
# Mac often won't have openssl library installed in place easy discoverable, if at all
openssl = { version = '0.10.68', features = [
    "vendored",
] } # Use vendored feature to build from source for cross compilation

[dev-dependencies]
rand = { version = "0.8.5" }

# Ensure up to date image for cross compilation
[package.metadata.cross.target.x86_64-unknown-linux-gnu]
image = "ghcr.io/cross-rs/x86_64-unknown-linux-gnu:edge"

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
image = "ghcr.io/cross-rs/aarch64-unknown-linux-gnu:edge"
