#  Copyright 2022-2025 Crown Copyright
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
[package]
name = "rust_sketch"
description = "Rust bindings for the quantile sketch from Apache DataSketches (https://datasketches.apache.org/) C++ implementation (https://github.com/apache/datasketches-cpp)."
keywords = ["datasketches", "sketch", "quantile_sketch"]
categories = ["science"]
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
publish = { workspace = true }

[dependencies]
cxx = { workspace = true }

[build-dependencies]
cxx-build = { workspace = true }
git2 = { workspace = true }
cargo_metadata = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
