# Copyright 2022-2025 Crown Copyright
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
[package]
name = "sleeper_core"
description = "This contains all data processing functionality for Sleeper using Apache DataFusion."
keywords = ["sleeper"]
categories = ["science"]
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
publish = { workspace = true }

[dependencies]
arrow = { workspace = true, features = ["prettyprint", "ffi" ] }
aggregator_udfs = { path = "../aggregator_udfs" }
async-trait = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { workspace = true, features = ["hardcoded-credentials"] }
aws-types = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
color-eyre = { workspace = true }
cxx = { workspace = true }
datafusion = { workspace = true }
filter_udfs = { path = "../filter_udfs" }
futures = { workspace = true }
log = { workspace = true }
num-format = { workspace = true }
object_store = { workspace = true }
objectstore_ext = { path = "../objectstore_ext" }
regex = { workspace = true }
rust_sketch = { path = "../rust_sketch" }
tokio = { workspace = true, features = ["full"] }
url = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
test-log = { workspace = true }
tokio-test = { workspace = true }
test_util = { path = "test_util" }