# Copyright 2022-2025 Crown Copyright
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
[package]
name = "sleeper_df"
description = "This is the native library for Sleeper that implements all of the Foreign Function Interface logic."
keywords = ["sleeper"]
categories = ["science"]
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
publish = { workspace = true }

[lib]
doc = true
doctest = true
test = true
crate-type = ["cdylib", "rlib"]

[dependencies]
#arrow = { workspace = true, features = ["prettyprint"] }
#aggregator_udfs = { path = "../aggregator_udfs" }
#aws-config = { workspace = true }
#aws-credential-types = { workspace = true, features = ["hardcoded-credentials"] }
##bytes = { workspace = true }
aws-types = { workspace = true }
chrono = { workspace = true }
color-eyre = { workspace = true }
#cxx = { workspace = true }
#datafusion = { workspace = true }
env_logger = { workspace = true }
#filter_udfs = { path = "../filter_udfs" }
#futures = { workspace = true }
log = { workspace = true }
libc = { workspace = true }
#num-format = { workspace = true }
#num-traits = { workspace = true }
#object_store = { workspace = true }
#objectstore_ext = { path = "../objectstore_ext" }
#regex = { workspace = true }
#rust_sketch = { path = "../rust_sketch" }
sleeper_core = { path = "../sleeper_core" }
tokio = { workspace = true, features = ["full"] }
url = { workspace = true }
